css/style.css
/* Images
–––––––––––––––––––––––––––––––––––––––––––––––––– */

img {
    position: relative;
    border-radius: 2px;
}

.square-image {
    border-style: solid;
    border-width: 2rem;
    border-color: #FBFBFB;
    width: 360px;
    height: 360px;
}

.small-image {
    border-width: 1.5rem;
    width: 240px;
    height: 240px;
}

.thumbnail {
    object-fit: cover;
    margin-top: 5px;
    width: 235px;
    height: 235px;
}

.box-shadow {
    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
}
.box-shadow:hover {
    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}


/* Text
–––––––––––––––––––––––––––––––––––––––––––––––––– */

.bigly {
    font-size: 1.7em;
}

.heading {
    font-weight: bold;
}

.date-caption {
    font-family: monospace;
    text-decoration: italic;
    text-align: right;
}

.fp-tooltip {
    color: black !important;
}

.card {
    padding: 30px;
    border-radius: 4px;
}


/* Alignment
–––––––––––––––––––––––––––––––––––––––––––––––––– */

/* Margins */
.ml-1 {
    margin-left: 1rem;
}
.mr-1 {
    margin-right: 1rem;
}
.mr-3 {
    margin-right: 3rem;
}
.mt-5 {
    margin-top: 5%;
}
.mt-25 {
    margin-top: 25%;
}

.fp-slidesNav {
    text-align: center;
}

.center {
    display: block;
    margin: 0 auto;
    text-align: center;
}

